<resources>
    <string name="version_unknown" translatable="false">Unknown Version</string>
    <string name="s_noNetwork_text">Network unavailable , click to refresh</string>
    <string name="click_once_more_to_exit">Click once more to exit</string>
    <string name="foryou">ForYou</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="home">home</string>
    <string name="video">Library</string>
    <string name="me">Me</string>
    <string name="loading_comments">Loading comments...</string>
    <string name="comment">Comment</string>
    <string name="videos">Videos</string>
    <string name="stories">Vlog</string>
    <string name="news">News</string>
    <string name="me_coins">Coins</string>
    <string name="me_balance">Balance</string>
    <string name="me_total_income">Total</string>
    <string name="me_l_daily">Daily Challenge</string>
    <string name="me_l_exchange">Exchange &amp; Withdraw</string>
    <string name="me_l_apprentice">Invite</string>
    <string name="app_name">Watch &amp; Earn </string>
    <string name="me_l_how_to_earn">How to Earn?</string>
    <string name="me_l_contact">Contact Us</string>
    <string name="me_l_enter_your">Enter your inviter\'s code</string>
    <string name="me_l_setting">Settings</string>
    <string name="s_clear_cache">Clear cache</string>
    <string name="s_up_data">Update</string>
    <string name="s_logout">Logout</string>
    <string name="clearUp">Have been cleaned up</string>
    <string name="updateApk">please wait…</string>
    <string name="google_banner_id">ca-app-pub-1331916574504070/5486962373</string>
    <string name="new_pass_word">New Password must be 6 to 22 numbers</string>
    <string name="earn_my_in_code">My invitation code:%s</string>
    <string name="earn_title">Earn 6000 coins for the First  invitation</string>
    <string name="earn_invite">Invite</string>
    <string name="earn_text_1">Coins from friends</string>
    <string name="earn_text_3">2nd class friends</string>
    <string name="earn_text_4">My Inviter</string>
    <string name="earn_text_5">Invitation Reward Form</string>
    <string name="earn_basic">Basic</string>
    <string name="earn_permanent">Permanent</string>
    <string name="earn_text_6">The bonus of invitation</string>
    <string name="earn_text_7">Your income will rise sharply after your friends earned by watching video,you can be award more coins from friends.</string>
    <string name="earn_text_8">1.The first invite，award 6000 coins\n\n2.Earn 2&#8211;21 times contribution of your friends if they keep earning here</string>
    <string name="null_commnet">Please input the content of the comment</string>
    <string name="no_follow_data_list">You haven’t followed anyone yet~</string>
    <string name="earn_title_stock">Life is much more fun when you have more friends</string>
    <string name="no_commment">No Coments~</string>
    <string name="empty">Empty</string>
    <string name="player_error">ERROR</string>
    <string name="close">close</string>
    <string name="clear">clear</string>
    <string name="overlong"> Overlong input</string>
    <string name="havepraice"> You have already praised me</string>
    <string name="havepraiceno"> You can\'t praise yourself</string>
    <string name="thanks">"Thanks"</string>
    <string name="follows">Follow us on facebook to get quick invite tips</string>
    <string name="no_follow_video_data_list">No Data</string>
    <string name="sharedCancel">Sharing cancellation</string>
    <string name="sharedFialed">Sharing failure</string>
    <string name="sharedSuccess">Sharing success</string>
    <string name="Successful">Successful</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="facebook_app_id">1549016045220845</string>
    <string name="fb_login_protocol_scheme">fb143712423144077</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="Epic">Epic</string>
    <string name="Slow">Slow</string>
    <string name="Normal">Normal</string>
    <string name="Fast">Fast</string>
    <string name="Flash">Flash</string>
    <string name="cut_music">Edit\nmusic</string>
    <string name="select_music">Select music</string>
    <string name="music">Music</string>
    <string name="beauty">Beauty</string>
    <string name="beauty_ch">Beauty</string>
    <string name="filters">Filters</string>
    <string name="timer">Timer</string>
    <string name="album_import">Import</string>
    <string name="delete">Delete</string>
    <string name="enter_e_mail_address">Enter e-mail address</string>
    <string name="enter_code">Enter code</string>
    <string name="get_code">Get code</string>
    <string name="enter_invitation_code">Enter Invitation code</string>
    <string name="by_signing_up_you_agree_to_the_privacy_policy_including_use_cookie_use">By signing up,you agree to the Privacy Policy，Including use Cookie Use。</string>
    <string name="sign_up">Sign up</string>
    <string name="shot_dis1">shoot your own video and share to friends to get reward</string>
    <string name="shot_dis2">Free shoot</string>
    <string name="shot_dis3">Shoot as you need to 30 seconds.</string>
    <string name="shot_dis4">Divided shoot</string>
    <string name="shot_dis5">Professional mode: shoot as you like and edit every divided clip </string>
    <string name="free_model">Free mode</string>
    <string name="speed">shooting speed</string>
    <string name="mopi">smooth</string>
    <string name="meibai">white</string>
    <string name="hongrun">rosy</string>
    <string name="video_delet_tip">Cannot delete during recording</string>
    <string name="send">send</string>
    <string name="guanzhu">Followed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nickname">Nickname</string>
    <string name="sex">Gender</string>
    <string name="example">Write something special here</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="china">China</string>
    <string name="play_error">Video playing error</string>
    <string name="input_keywords">keywords is null</string>
    <string name="select_tag"># Select tag</string>
    <string name="draft">Draft</string>
    <string name="publish">Publish</string>
    <string name="tag">Tag</string>
    <string name="divides">Divides</string>
    <string name="length">Total length</string>
    <string name="length_10">10S</string>
    <string name="length_15">15S</string>
    <string name="length_30">30S</string>
    <string name="shot_free_dis">Maxium length 30s\nUnlimited Divides</string>
    <string name="shot_block_dis">10S · 4Divides</string>
    <string name="ok">ok</string>
    <string name="wancheng">Done</string>
    <string name="introduce_video_title">New user video tutorial</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linked_in">Gmail</string>
    <string name="tip_off">Tip-off</string>
    <string name="fans">Fans</string>
    <string name="likes">Likes</string>
    <string name="treasure_box_context">More friends More Coins</string>
    <string name="hearts">Hearts</string>
    <string name="age">Age</string>
    <string name="please_say_something">Please Say Something...</string>
    <string name="comments">Comment:</string>
    <string name="comment_0">Comment:0</string>
    <string name="focus_on_success">Focus on success</string>
    <string name="sign_in_context">Check-in everyday to get more</string>
    <string name="password_must_be_6_to_22_numbers">Password must be 6 to 22 numbers</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="forget_password">Forget password</string>
    <string name="log_in">Log in</string>
    <string name="successful">Successful</string>
    <string name="def_signature">No Bio Yet</string>
    <string name="no_comment">No comment</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_now">Reset now</string>
    <string name="no_more_datas">No More Datas</string>
    <string name="no_bio_yet">No Bio Yet</string>
    <string name="congratulation">Congratulation</string>
    <string name="share_to_twitter_to_earn_10_more">Share to Twitter to earn 10 more</string>
    <string name="report">report</string>
    <string name="copy_link">Copy link</string>
    <string name="music_editor_hint">Glide to edit music</string>
    <string name="right_menu_text_save">save</string>
    <string name="special_effect">Special\nEffect</string>
    <string name="text">Text</string>
    <string name="stickers">Stickers</string>
    <string name="transition">Transition</string>
    <string name="volume">Volume</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="m_import">Import</string>
    <string name="select_ration">Choose Video ratio</string>
    <string name="trimTime">Clip length after trimmed</string>
    <string name="effect_str1">Filter special effect</string>
    <string name="effect_str2">Time special effect</string>
    <string name="effect_str3">〈</string>
    <string name="effect_str4">Locate and press</string>
    <string name="effect_str5">Cancel</string>
    <string name="effect_str6">Choose special effects</string>
    <string name="effect_filter1">Spirit</string>
    <string name="effect_filter2">Mirror effect</string>
    <string name="effect_filter3">Shake</string>
    <string name="effect_filter4">Wave</string>
    <string name="effect_filter5">Black magic</string>
    <string name="effect_filter6">Classic</string>
    <string name="effect_filter7">Viewfinder</string>
    <string name="effect_filter8">Summer</string>
    <string name="effect_filter9">Sunset</string>
    <string name="effect_filter10">Pure</string>
    <string name="effect_filter11">Illusion</string>
    <string name="effect_time1">None</string>
    <string name="effect_time2">Time reverse</string>
    <string name="effect_time3">repeat</string>
    <string name="effect_time4">Slow motion</string>
    <string name="input_info">Tap to input text</string>
    <string name="edit_ok">OK</string>
    <string name="to_all_style">Apply template to all sub-title</string>
    <string name="sound">Sound</string>
    <string name="silence">Silence</string>
    <string name="all">Apply to all transition</string>
    <string name="locate_and_press">Locate and press</string>
    <string name="cancel">Cancel</string>
    <string name="tip">☺</string>
    <string name="delet_last">Sure to delete last segment</string>
    <string name="delet_current">Sure to delete current video</string>
    <string name="del">Delete</string>
    <string name="cancel_china">Cancel</string>
    <string name="filter">Filter</string>
    <string name="speeds">Speed</string>
    <string name="tip_cut_video">Please delete the existing divided videos before you modify anything</string>
    <string name="import_s">Import</string>
    <string name="message">Message</string>
    <string name="filter_value">Exposure</string>
    <string name="choosing_labels_is_easier_to_attract_fans">Chose Popular hashtags. \n Maximum tags: 3</string>
    <string name="notices">Notices</string>
    <string name="your_account_has_loggedin_on_other_device">Your account has loggedin on other device</string>
    <string name="re_login">Re-login</string>
    <string name="login_tip">Log in to cash out</string>
    <string name="fast_login"></string>
    <string name="or">or</string>
    <string name="email_login">Log in with Email</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in_me">Log In</string>
</resources>