<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/c50000000"
    android:layout_height="50dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="@string/speed"
            android:textColor="@color/c60ffffff"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/rg_video"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_video_1"
                style="@style/radio_button_style"
                android:textColor="@color/shot_speed_color"
                android:text="@string/Epic" />

            <RadioButton
                android:id="@+id/rb_video_2"
                style="@style/radio_button_style"
                android:textColor="@color/shot_speed_color"
                android:text="@string/Slow" />

            <RadioButton
                android:id="@+id/rb_video_3"
                style="@style/radio_button_style"
                android:textColor="@color/shot_speed_color"
                android:checked="true"
                android:text="@string/Normal" />

            <RadioButton
                android:id="@+id/rb_video_4"
                style="@style/radio_button_style"
                android:textColor="@color/shot_speed_color"
                android:text="@string/Fast" />

            <RadioButton
                android:id="@+id/rb_video_5"
                style="@style/radio_button_style"
                android:textColor="@color/shot_speed_color"
                android:text="@string/Flash" />
        </RadioGroup>
    </LinearLayout>

</FrameLayout>