<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sven.huinews.international.main.login.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/login_phone_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:hint="@string/enter_e_mail_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/themeColorTextBack"
            android:textColorHint="@color/themeColorTextGray"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#f0f0f0" />

        <EditText
            android:id="@+id/login_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:hint="@string/password_must_be_6_to_22_numbers"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/themeColorTextBack"
            android:textColorHint="@color/themeColorTextGray"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#f0f0f0" />

        <TextView
            android:id="@+id/login_find_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:text="@string/forget_password"
            android:textColor="@color/tab_tv_color_cli" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/btn_login_nor"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_login_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/dialog_share_wechat_zoom"
            android:gravity="center"
            android:text="@string/facebook"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_tiwtter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/dialog_share_wechat"
            android:gravity="center"
            android:text="@string/twitter"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/gmail"
            android:gravity="center"
            android:text="@string/linked_in"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>
