<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ce8ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="66dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/shot_dis1"
            android:textColor="@color/c999999"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="20dp"
            android:text="@string/shot_dis2"
            android:textColor="@color/c333333"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="20dp"
            android:text="@string/shot_dis3"
            android:textColor="@color/c999999"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="20dp"
            android:text="@string/shot_dis4"
            android:textColor="@color/c333333"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="20dp"
            android:text="@string/shot_dis5"
            android:textColor="@color/c999999"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_close"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shot_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_shot_free"
            android:gravity="center"
            android:text="@string/shot_dis2"
            android:textColor="@color/c333333" />

        <TextView
            android:id="@+id/shot_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_shot_block"
            android:gravity="center"
            android:text="@string/shot_dis4"
            android:textColor="@color/c333333" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:src="@mipmap/login_close" />
</RelativeLayout>