<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_login_shape"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_login_select">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/c333"
        android:text="@string/login_tip"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:layout_marginTop="21dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fast_login"
        android:textSize="13sp"
        android:textColor="@color/c999999"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/facebook_big" />

        <ImageView
            android:id="@+id/tt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/tw_big" />

        <ImageView
            android:id="@+id/ins_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ins_big"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/gmail_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/gmail" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/or"
        android:textSize="13sp"
        android:textColor="@color/c999999"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"/>


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:background="@drawable/task_top_shape"
        android:gravity="center"
        android:text="@string/email_login"
        android:textColor="@color/bg_white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/by_signing_up_you_agree_to_the_privacy_policy_including_use_cookie_use"
        android:textColor="@color/c333"
        android:textSize="12sp" />

    </LinearLayout>

    <include layout="@layout/dialog_login_input"/>
</LinearLayout>